<?xml version="1.0"?>
<package format="2">
    <name>cloud_proc</name>
    <version>0.0.0</version>
    <description>Point cloud processing</description>
    <maintainer email="tpetricek@gmail.com">Tomas Petricek</maintainer>
    <license>BSD</license>
    <!-- <url type="website">http://wiki.ros.org/cloud_proc</url> -->
    <author email="tpetricek@gmail.com">Tomas Petricek</author>
    <author email="peckama2@fel.cvut.cz">Martin Pecka</author>

    <depend>cras_cpp_common</depend>
    <depend>pcl_ros</depend>
    <depend>nodelet</depend>
    <depend>subt_diagnostics</depend>

    <build_depend>class_loader</build_depend>

    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>tf2</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>tf2_sensor_msgs</exec_depend>
    
    <buildtool_depend>catkin</buildtool_depend>

    <export>
        <nodelet plugin="${prefix}/nodelets.xml" />
    </export>
</package>
